--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,27 @@
 @import url('https://fonts.googleapis.com/css2?family=Ysabeau+Office:wght@100&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Belanosima&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap');
+
 .App {
   text-align: center;
   background-color: antiquewhite;
+}
+::-webkit-scrollbar {
+  width: 10px;
+  background-color: #20242b;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+::-webkit-scrollbar-thumb {
+  background: #0da39e; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(9, 146, 139); 
 }
